Сверстала главную страницу

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/normalize.css">
 </head>
-<body>
+<body class="blood">
   <header class="header">
     <a href="#" class="logo-link">
       <img width=46 height=71 src="img/logo.png" alt="logo:Venom-2" class="logo-img">
@@ -40,8 +40,19 @@
        <p class="hero-discription">В настырном журналисте по-прежнему живет симбиот. Том Харди в образе обаятельного суперзлодея из комиксов Marvel.</p>
      </div>
      <!-- /.hero-text -->
+     <div class="button-group">
+          <button class="button button-premiere">
+            <img width="15" height="15" src="img/play.svg" alt="Play" class="button-icon">
+            <span class="button-text">смотреть трейлер</span>
+          </button>
+          <a target="_blank" href="https://goodwincinema.ru/filmbase/1828" class="button button-link">
+            <img width="15" height="15" src="img/ticket.svg" alt="Ticket" class="button-icon">
+            <span class="button-text">билеты на премьеру</span></a>
+     </div>
+     <!-- /.button-group -->
    </div>
    <!-- /.hero -->
+   <img src="img/Venom.png" alt="pic:Venom" class="venom">
   </main>
 </body>
 </html>
