--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       <img width=46 height=71 src="img/logo.png" alt="logo:Venom-2" class="logo-img">
     </a>
     <nav class="nav">
+      <button class="menu-button">
+        <span class="menu-button-text">меню</span>
+        <img src="img/menu.svg" alt="icon: burger menu" class="menu-button-icon">
+      </button>
       <ul class="nav-menu">
         <li class="nav-menu-item">
           <a href="about.html" class="nav-menu-link"> о фильме </a>
